--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Sohrat Jumadurdyyev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.16",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.17",
     "validator": "^13.5.2"
   }
 }
