--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
+    "multer": "^1.4.2",
+    "sharp": "^0.27.1",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   }
 }
