--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "Sohrat Jumadurdyyev",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "sharp": "^0.27.1",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
